volume not done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UnitConverter">
         <activity
+            android:name=".VolumeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AreaActivity"
+            android:exported="false"
+            android:theme="@style/Theme.UnitConverter" />
+        <activity
             android:name=".TemperatureActivity"
             android:exported="false" />
         <activity
